--- a/myoverload.sty
+++ b/myoverload.sty
@@ -4,50 +4,107 @@
 %%  Email  :  ryoya31026[a t]gmail.com
 %%
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{myoverload}[2021/08/01 v0.1]
+\ProvidesPackage{myoverload}[2021/08/02 v0.2]
 
 \def\enddelim{\PackageError{myoverload.sty}{This command is not intended to be used alone}\@ehd}
 \let\@xp\expandafter
 
 \newcommand{\newoverload}[1]{%
-	\@xp\newcount\csname c@#1\endcsname\relax
-	\csname c@#1\endcsname=\z@\relax
-	\@xp\def\csname #1\endcsname##1{%
+	\@ifundefined{#1}{}{%
+		\PackageError{myoverload.sty}{``\protect#1\space " is already defined}\@ehd
+	}%
+	\@xp\newcount\csname m@c@#1\endcsname\relax
+	\csname m@c@#1\endcsname=\z@\relax
+	\@xp\def\csname #1\endcsname{%
+		\csname m@c@#1\endcsname=\z@\relax
+		\csname e@#1\endcsname
+	}%
+	\@xp\def\csname e@#1\endcsname##1{%
 		\ifx \enddelim##1\relax
-			\@xp\ifnum\csname c@#1\endcsname=0
+			\@xp\ifnum\csname m@c@#1\endcsname=0
 				\csname #1@0\endcsname
-			\fi
-			\@xp\ifnum\csname c@#1\endcsname=1
-				\csname #1@1\endcsname{\csname #1@temp@1\endcsname}
-			\fi
-			\@xp\ifnum\csname c@#1\endcsname=2
-				\csname #1@2\endcsname{\csname #1@temp@1\endcsname}{\csname #1@temp@2\endcsname}
-			\fi
-			\@xp\ifnum\csname c@#1\endcsname=3
-				\csname #1@3\endcsname{\csname #1@temp@1\endcsname}{\csname #1@temp@2\endcsname}{\csname #1@temp@3\endcsname}
-			\fi
-			\@xp\ifnum\csname c@#1\endcsname=4
-				\csname #1@4\endcsname{\csname #1@temp@1\endcsname}{\csname #1@temp@2\endcsname}{\csname #1@temp@3\endcsname}{\csname #1@temp@4\endcsname}
-			\fi
-			\@xp\ifnum\csname c@#1\endcsname=5
-				\csname #1@5\endcsname{\csname #1@temp@1\endcsname}{\csname #1@temp@2\endcsname}{\csname #1@temp@3\endcsname}{\csname #1@temp@4\endcsname}{\csname #1@temp@5\endcsname}
-			\fi
-			\@xp\ifnum\csname c@#1\endcsname=6
-				\csname #1@6\endcsname{\csname #1@temp@1\endcsname}{\csname #1@temp@2\endcsname}{\csname #1@temp@3\endcsname}{\csname #1@temp@4\endcsname}{\csname #1@temp@5\endcsname}{\csname #1@temp@6\endcsname}
-			\fi
-			\@xp\ifnum\csname c@#1\endcsname=7
-				\csname #1@7\endcsname{\csname #1@temp@1\endcsname}{\csname #1@temp@2\endcsname}{\csname #1@temp@3\endcsname}{\csname #1@temp@4\endcsname}{\csname #1@temp@5\endcsname}{\csname #1@temp@6\endcsname}{\csname #1@temp@7\endcsname}
-			\fi
-			\@xp\ifnum\csname c@#1\endcsname=8
-				\csname #1@8\endcsname{\csname #1@temp@1\endcsname}{\csname #1@temp@2\endcsname}{\csname #1@temp@3\endcsname}{\csname #1@temp@4\endcsname}{\csname #1@temp@5\endcsname}{\csname #1@temp@6\endcsname}{\csname #1@temp@7\endcsname}{\csname #1@temp@8\endcsname}
-			\fi
-			\@xp\ifnum\csname c@#1\endcsname=9
-				\csname #1@9\endcsname{\csname #1@temp@1\endcsname}{\csname #1@temp@2\endcsname}{\csname #1@temp@3\endcsname}{\csname #1@temp@4\endcsname}{\csname #1@temp@5\endcsname}{\csname #1@temp@6\endcsname}{\csname #1@temp@7\endcsname}{\csname #1@temp@8\endcsname}{\csname #1@temp@9\endcsname}
-			\fi
+			\else
+			\@xp\ifnum\csname m@c@#1\endcsname=1
+				\csname #1@1\endcsname{\csname #1@temp@1\endcsname}%
+			\else
+			\@xp\ifnum\csname m@c@#1\endcsname=2
+				\csname #1@2\endcsname{\csname #1@temp@1\endcsname}{\csname #1@temp@2\endcsname}%
+			\else
+			\@xp\ifnum\csname m@c@#1\endcsname=3
+				\csname #1@3\endcsname{\csname #1@temp@1\endcsname}{\csname #1@temp@2\endcsname}{\csname #1@temp@3\endcsname}%
+			\else
+			\@xp\ifnum\csname m@c@#1\endcsname=4
+				\csname #1@4\endcsname{\csname #1@temp@1\endcsname}{\csname #1@temp@2\endcsname}{\csname #1@temp@3\endcsname}{\csname #1@temp@4\endcsname}%
+			\else
+			\@xp\ifnum\csname m@c@#1\endcsname=5
+				\csname #1@5\endcsname{\csname #1@temp@1\endcsname}{\csname #1@temp@2\endcsname}{\csname #1@temp@3\endcsname}{\csname #1@temp@4\endcsname}{\csname #1@temp@5\endcsname}%
+			\else
+			\@xp\ifnum\csname m@c@#1\endcsname=6
+				\csname #1@6\endcsname{\csname #1@temp@1\endcsname}{\csname #1@temp@2\endcsname}{\csname #1@temp@3\endcsname}{\csname #1@temp@4\endcsname}{\csname #1@temp@5\endcsname}{\csname #1@temp@6\endcsname}%
+			\else
+			\@xp\ifnum\csname m@c@#1\endcsname=7
+				\csname #1@7\endcsname{\csname #1@temp@1\endcsname}{\csname #1@temp@2\endcsname}{\csname #1@temp@3\endcsname}{\csname #1@temp@4\endcsname}{\csname #1@temp@5\endcsname}{\csname #1@temp@6\endcsname}{\csname #1@temp@7\endcsname}%
+			\else
+			\@xp\ifnum\csname m@c@#1\endcsname=8
+				\csname #1@8\endcsname{\csname #1@temp@1\endcsname}{\csname #1@temp@2\endcsname}{\csname #1@temp@3\endcsname}{\csname #1@temp@4\endcsname}{\csname #1@temp@5\endcsname}{\csname #1@temp@6\endcsname}{\csname #1@temp@7\endcsname}{\csname #1@temp@8\endcsname}%
+			\else
+			\@xp\ifnum\csname m@c@#1\endcsname=9
+				\csname #1@9\endcsname{\csname #1@temp@1\endcsname}{\csname #1@temp@2\endcsname}{\csname #1@temp@3\endcsname}{\csname #1@temp@4\endcsname}{\csname #1@temp@5\endcsname}{\csname #1@temp@6\endcsname}{\csname #1@temp@7\endcsname}{\csname #1@temp@8\endcsname}{\csname #1@temp@9\endcsname}%
+			\fi\fi\fi\fi\fi\fi\fi\fi\fi\fi
 		\else
-			\@xp\global\@xp\advance\csname c@#1\endcsname\@ne\relax
-			\@xp\def\csname #1@temp@\@xp\the\csname c@#1\endcsname\endcsname{##1}%
-			\@xp\@xp\@xp\csname \@xp#1\@xp\endcsname
+			\@xp\global\@xp\advance\csname m@c@#1\endcsname\@ne\relax
+			\@xp\def\csname #1@temp@\@xp\the\csname m@c@#1\endcsname\endcsname{##1}%
+			\@xp\@xp\@xp\csname \@xp e\@xp @#1\@xp\endcsname
+		\fi
+	}%
+}
+
+\newcommand{\renewoverload}[1]{%
+	\@ifundefined{#1}{%
+		\PackageError{myoverload.sty}{``\protect#1\space " is not already defined}\@ehd}{%
+	}%
+	\@xp\newcount\csname m@c@#1\endcsname\relax
+	\csname m@c@#1\endcsname=\z@\relax
+	\@xp\def\csname #1\endcsname{%
+		\csname m@c@#1\endcsname=\z@\relax
+		\csname e@#1\endcsname
+	}%
+	\@xp\def\csname e@#1\endcsname##1{%
+		\ifx \enddelim##1\relax
+			\@xp\ifnum\csname m@c@#1\endcsname=0
+			\csname #1@0\endcsname
+		\else
+		\@xp\ifnum\csname m@c@#1\endcsname=1
+			\csname #1@1\endcsname{\csname #1@temp@1\endcsname}%
+		\else
+		\@xp\ifnum\csname m@c@#1\endcsname=2
+			\csname #1@2\endcsname{\csname #1@temp@1\endcsname}{\csname #1@temp@2\endcsname}%
+		\else
+		\@xp\ifnum\csname m@c@#1\endcsname=3
+			\csname #1@3\endcsname{\csname #1@temp@1\endcsname}{\csname #1@temp@2\endcsname}{\csname #1@temp@3\endcsname}%
+		\else
+		\@xp\ifnum\csname m@c@#1\endcsname=4
+			\csname #1@4\endcsname{\csname #1@temp@1\endcsname}{\csname #1@temp@2\endcsname}{\csname #1@temp@3\endcsname}{\csname #1@temp@4\endcsname}%
+		\else
+		\@xp\ifnum\csname m@c@#1\endcsname=5
+			\csname #1@5\endcsname{\csname #1@temp@1\endcsname}{\csname #1@temp@2\endcsname}{\csname #1@temp@3\endcsname}{\csname #1@temp@4\endcsname}{\csname #1@temp@5\endcsname}%
+		\else
+		\@xp\ifnum\csname m@c@#1\endcsname=6
+			\csname #1@6\endcsname{\csname #1@temp@1\endcsname}{\csname #1@temp@2\endcsname}{\csname #1@temp@3\endcsname}{\csname #1@temp@4\endcsname}{\csname #1@temp@5\endcsname}{\csname #1@temp@6\endcsname}%
+		\else
+		\@xp\ifnum\csname m@c@#1\endcsname=7
+			\csname #1@7\endcsname{\csname #1@temp@1\endcsname}{\csname #1@temp@2\endcsname}{\csname #1@temp@3\endcsname}{\csname #1@temp@4\endcsname}{\csname #1@temp@5\endcsname}{\csname #1@temp@6\endcsname}{\csname #1@temp@7\endcsname}%
+		\else
+		\@xp\ifnum\csname m@c@#1\endcsname=8
+			\csname #1@8\endcsname{\csname #1@temp@1\endcsname}{\csname #1@temp@2\endcsname}{\csname #1@temp@3\endcsname}{\csname #1@temp@4\endcsname}{\csname #1@temp@5\endcsname}{\csname #1@temp@6\endcsname}{\csname #1@temp@7\endcsname}{\csname #1@temp@8\endcsname}%
+		\else
+		\@xp\ifnum\csname m@c@#1\endcsname=9
+			\csname #1@9\endcsname{\csname #1@temp@1\endcsname}{\csname #1@temp@2\endcsname}{\csname #1@temp@3\endcsname}{\csname #1@temp@4\endcsname}{\csname #1@temp@5\endcsname}{\csname #1@temp@6\endcsname}{\csname #1@temp@7\endcsname}{\csname #1@temp@8\endcsname}{\csname #1@temp@9\endcsname}%
+		\fi\fi\fi\fi\fi\fi\fi\fi\fi\fi
+		\else
+			\@xp\global\@xp\advance\csname m@c@#1\endcsname\@ne\relax
+			\@xp\def\csname #1@temp@\@xp\the\csname m@c@#1\endcsname\endcsname{##1}%
+			\@xp\@xp\@xp\csname \@xp e\@xp @#1\@xp\endcsname
 		\fi
 	}
 }
